--- a/profile/src/main/resources/application.yml
+++ b/profile/src/main/resources/application.yml
@@ -33,6 +33,7 @@ profile:
     projectUrl: ${PROJECT_URL}
     purchaseUrl: ${PURCHASE_URL}
     resourceUrl: ${RESOURCE_URL}
+    assetUrl: ${ASSET_URL}
 logging:
   file:
     name: logs/profile-application.log
