--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -32,6 +32,7 @@ project:
     projectUrl: ${PROJECT_URL}
     purchaseUrl: ${PURCHASE_URL}
     resourceUrl: ${RESOURCE_URL}
+    assetUrl: ${ASSET_URL}
 
 logging:  
   file:
