--- a/purchase/src/main/resources/application.yml
+++ b/purchase/src/main/resources/application.yml
@@ -31,6 +31,7 @@ purchase:
   app:
     jwtPublicKey: ${JWT_PUBLIC_KEY}
     jwtExpirationMs: ${JWT_EXPIRATION_MS}
+    assetUrl: ${ASSET_URL}
     profileUrl: ${PROFILE_URL}
     financeUrl: ${FINANCE_URL}
     projectUrl: ${PROJECT_URL}
