update: refine CORS configuration and standardize service container names in docker-compose

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   asset:
     image: gcr.io/propensi-451504/asset:latest
-    container_name: asset_service
+    container_name: asset-service
     restart: always
     ports:
       - "8081:8081"
@@ -12,19 +12,18 @@ services:
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
-      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
-      - PROFILE_URL=http://profile:8080/api
-      - ASSET_URL=http://asset:8081/api 
-      - FINANCE_URL=http://finance:8082/api
-      - PROJECT_URL=http://project:8083/api
-      - PURCHASE_URL=http://purchase:8084/api
-      - RESOURCE_URL=http://resource:8085/api
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
     networks:
       - kamis-network
 
   finance:
     image: gcr.io/propensi-451504/finance:latest
-    container_name: finance_service
+    container_name: finance-service
     restart: always
     ports:
       - "8082:8082"
@@ -34,18 +33,18 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
       - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
-      - PROFILE_URL=http://profile:8080/api
-      - ASSET_URL=http://asset:8081/api
-      - FINANCE_URL=http://finance:8082/api
-      - PROJECT_URL=http://project:8083/api
-      - PURCHASE_URL=http://purchase:8084/api
-      - RESOURCE_URL=http://resource:8085/api
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
     networks:
       - kamis-network
 
   profile:
     image: gcr.io/propensi-451504/profile:latest
-    container_name: profile_service
+    container_name: profile-service
     restart: always
     ports:
       - "8080:8080"
@@ -56,18 +55,18 @@ services:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
       - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
-      - PROFILE_URL=http://profile:8080/api
-      - ASSET_URL=http://asset:8081/api
-      - FINANCE_URL=http://finance:8082/api
-      - PROJECT_URL=http://project:8083/api
-      - PURCHASE_URL=http://purchase:8084/api
-      - RESOURCE_URL=http://resource:8085/api
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
     networks:
       - kamis-network
 
   project:
     image: gcr.io/propensi-451504/project:latest
-    container_name: project_service
+    container_name: project-service
     restart: always
     ports:
       - "8083:8083"
@@ -77,18 +76,18 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
       - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
-      - PROFILE_URL=http://profile:8080/api
-      - ASSET_URL=http://asset:8081/api
-      - FINANCE_URL=http://finance:8082/api
-      - PROJECT_URL=http://project:8083/api
-      - PURCHASE_URL=http://purchase:8084/api
-      - RESOURCE_URL=http://resource:8085/api  
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
     networks:
       - kamis-network
 
   purchase:
     image: gcr.io/propensi-451504/purchase:latest
-    container_name: purchase_service
+    container_name: purchase-service
     restart: always
     ports:
       - "8084:8084"
@@ -98,18 +97,18 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
       - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
-      - PROFILE_URL=http://profile:8080/api
-      - ASSET_URL=http://asset:8081/api
-      - FINANCE_URL=http://finance:8082/api
-      - PROJECT_URL=http://project:8083/api
-      - PURCHASE_URL=http://purchase:8084/api
-      - RESOURCE_URL=http://resource:8085/api
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
     networks:
       - kamis-network
 
   resource:
     image: gcr.io/propensi-451504/resource:latest
-    container_name: resource_service
+    container_name: resource-service
     restart: always
     ports:
       - "8085:8085"
@@ -119,12 +118,12 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
       - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
-      - PROFILE_URL=http://profile:8080/api
-      - ASSET_URL=http://asset:8081/api
-      - FINANCE_URL=http://finance:8082/api
-      - PROJECT_URL=http://project:8083/api
-      - PURCHASE_URL=http://purchase:8084/api
-      - RESOURCE_URL=http://resource:8085/api
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
     networks:
       - kamis-network
 
