update: add FRONTEND_URL environment variable

--- a/asset/src/main/resources/application.yml
+++ b/asset/src/main/resources/application.yml
@@ -33,6 +33,7 @@ asset:
     projectUrl: ${PROJECT_URL}
     purchaseUrl: ${PURCHASE_URL}
     resourceUrl: ${RESOURCE_URL}
+    frontendUrl: ${FRONTEND_URL}
 logging:
   file:
     name: logs/asset-application.log
