--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -33,7 +33,7 @@ project:
     purchaseUrl: ${PURCHASE_URL}
     resourceUrl: ${RESOURCE_URL}
     assetUrl: ${ASSET_URL}
-
+    frontendUrl: ${FRONTEND_URL}
 logging:  
   file:
     name: logs/project-application.log
