--- a/resource/src/main/resources/application.yml
+++ b/resource/src/main/resources/application.yml
@@ -33,7 +33,7 @@ resource:
     purchaseUrl: ${PURCHASE_URL}
     resourceUrl: ${RESOURCE_URL}
     assetUrl: ${ASSET_URL}
-
+    frontendUrl: ${FRONTEND_URL}
 logging:
   file:
     name: logs/resource-application.log
