--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -18,6 +18,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
     networks:
       - kamis-network
 
@@ -39,6 +40,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
     networks:
       - kamis-network
 
@@ -61,6 +63,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
     networks:
       - kamis-network
 
@@ -82,6 +85,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
     networks:
       - kamis-network
 
@@ -103,6 +107,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
     networks:
       - kamis-network
 
@@ -124,6 +129,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
     networks:
       - kamis-network
 
