--- a/profile/src/main/resources/application.yml
+++ b/profile/src/main/resources/application.yml
@@ -34,6 +34,7 @@ profile:
     purchaseUrl: ${PURCHASE_URL}
     resourceUrl: ${RESOURCE_URL}
     assetUrl: ${ASSET_URL}
+    frontendUrl: ${FRONTEND_URL}
 logging:
   file:
     name: logs/profile-application.log
