Update: change docker compose and add gitignore for purchase

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   asset:
     image: gcr.io/propensi-451504/asset:latest
-    container_name: asset-service 
+    container_name: asset-service
     restart: always
     ports:
       - "8081:8081"
@@ -19,6 +19,9 @@ services:
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
       - FRONTEND_URL=${FRONTEND_URL}
+      - FILE_STORAGE_PATH=/app/uploads
+    volumes:
+      - /microservices/data/asset-uploads:/app/uploads
     networks:
       - kamis-network
 
@@ -108,6 +111,9 @@ services:
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
       - FRONTEND_URL=${FRONTEND_URL}
+      - FILE_STORAGE_PATH=/app/uploads
+    volumes:
+      - /microservices/data/purchase-uploads:/app/uploads
     networks:
       - kamis-network
 
@@ -122,6 +128,6 @@ networks:
   kamis-network:
     external: true
     driver: bridge
-    name: kamis-network 
+    name: kamis-network
   default:
     driver: bridge
