--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
         run: ls -l ${{ matrix.service }}/build/libs || echo "No JAR found"
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.service }}-jar
           path: ${{ matrix.service }}/build/libs/*.jar
@@ -52,12 +52,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [ asset, finance, profile, project, purchase, resource ]
+        service: [ asset, finance.report, profile, project, purchase, resource ]
     steps:
       - uses: actions/checkout@v4
 
       - name: Download JAR
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: ${{ matrix.service }}-jar
           path: ./
