--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [asset, finance.report, profile, project, purchase, resource]
+        service: [asset, finance, profile, project, purchase, resource]
     name: Build JARs (${{ matrix.service }})
     steps:
       - uses: actions/checkout@v4
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [ asset, finance.report, profile, project, purchase, resource ]
+        service: [ asset, finance, profile, project, purchase, resource ]
     steps:
       - uses: actions/checkout@v4
 
@@ -63,19 +63,34 @@ jobs:
           path: ./
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: image=moby/buildkit:latest
+        id: buildx
+        continue-on-error: true
+
+      - name: Set up Docker Buildx (retry on failure)
+        uses: docker/setup-buildx-action@v3
+        if: steps.buildx.outcome == 'failure'
+        with:
+          driver-opts: image=moby/buildkit:latest
 
       - name: Authenticate to GCR
-        run: echo "${{ secrets.GCLOUD_SERVICE_KEY }}" \
-               | base64 --decode \
-               | docker login -u _json_key --password-stdin https://gcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GCLOUD_SERVICE_KEY }}
 
       - name: Build & Push
-        run: |
-          docker build \
-            -t ${{ secrets.IMAGE_REPO }}/${{ matrix.service }}:latest \
-            -f ${{ matrix.service }}/Dockerfile .
-          docker push ${{ secrets.IMAGE_REPO }}/${{ matrix.service }}:latest
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ${{ matrix.service }}/Dockerfile
+          push: true
+          tags: ${{ secrets.IMAGE_REPO }}/${{ matrix.service }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     name: Deploy to VM
