--- a/finance.report/Dockerfile
+++ b/finance.report/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21-jre-alpine
 
-COPY finance.report/build/libs/finance.report-0.0.1-SNAPSHOT.jar /app.jar
+COPY build/libs/finance.report-0.0.1-SNAPSHOT.jar /app.jar
 
 EXPOSE 8082
 
