--- a/profile/Dockerfile
+++ b/profile/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21-jre-alpine
 
-COPY profile/build/libs/profile-0.0.1-SNAPSHOT.jar /app.jar
+COPY build/libs/profile-0.0.1-SNAPSHOT.jar /app.jar
 
 EXPOSE 8080
 
