--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21-jre-alpine
 
-COPY project/build/libs/project-0.0.1-SNAPSHOT.jar /app.jar
+COPY build/libs/project-0.0.1-SNAPSHOT.jar /app.jar
 
 EXPOSE 8083
 
