--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,37 +45,60 @@ jobs:
           name: ${{ matrix.service }}-jar
           path: ${{ matrix.service }}/build/libs/*.jar
 
-
   publish:
     name: Build & Push Docker
     needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [ asset, finance.report, profile, project, purchase, resource ]
+        # Make sure the service names match between build and publish jobs
+        service: [asset, finance.report, profile, project, purchase, resource]
     steps:
       - uses: actions/checkout@v4
+
+      - name: Create build/libs directory
+        run: mkdir -p ${{ matrix.service }}/build/libs/
 
       - name: Download JAR
         uses: actions/download-artifact@v4
         with:
           name: ${{ matrix.service }}-jar
-          path: ./
+          path: ${{ matrix.service }}/build/libs/
+          
+      - name: Debug downloaded artifacts
+        run: |
+          echo "Listing contents of ${{ matrix.service }}/build/libs/"
+          ls -la ${{ matrix.service }}/build/libs/ || echo "Directory not found"
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
+        id: buildx
+        continue-on-error: true
+        with:
+          driver-opts: image=moby/buildkit:latest
+          
+      - name: Set up Docker Buildx (retry on failure)
+        if: steps.buildx.outcome == 'failure'
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: image=moby/buildkit:latest
 
       - name: Authenticate to GCR
-        run: echo "${{ secrets.GCLOUD_SERVICE_KEY }}" \
-               | base64 --decode \
-               | docker login -u _json_key --password-stdin https://gcr.io || true
+        uses: docker/login-action@v3
+        with:
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GCLOUD_SERVICE_KEY }}
 
       - name: Build & Push
-        run: |
-          docker build \
-            -t ${{ secrets.IMAGE_REPO }}/${{ matrix.service }}:latest \
-            -f ${{ matrix.service }}/Dockerfile .
-          docker push ${{ secrets.IMAGE_REPO }}/${{ matrix.service }}:latest
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.service }}
+          file: ${{ matrix.service }}/Dockerfile
+          push: true
+          tags: ${{ secrets.IMAGE_REPO }}/${{ matrix.service }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     name: Deploy to VM
