--- a/resource/Dockerfile
+++ b/resource/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21-jre-alpine
 
-COPY resource/build/libs/resource-0.0.1-SNAPSHOT.jar /app.jar
+COPY build/libs/resource-0.0.1-SNAPSHOT.jar /app.jar
 
 EXPOSE 8085
 
