--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,11 +84,9 @@ jobs:
           driver-opts: image=moby/buildkit:latest
 
       - name: Authenticate to GCR
-        uses: docker/login-action@v3
-        with:
-          registry: gcr.io
-          username: _json_key
-          password: ${{ secrets.GCLOUD_SERVICE_KEY }}
+        run: echo "${{ secrets.GCLOUD_SERVICE_KEY }}" \
+          | base64 --decode \
+          | docker login -u _json_key --password-stdin https://gcr.io || true
 
       - name: Build & Push
         uses: docker/build-push-action@v5
