--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -125,24 +125,22 @@ jobs:
 
       - name: Generate remote .env & launch
         run: |
-          ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" bash -s << 'EOF'
-            cat > ~/microservices-deploy/.env << ENV
-            DATABASE_URL_ASSET=${{ secrets.DATABASE_URL_ASSET }}
-            DATABASE_URL_FINANCE=${{ secrets.DATABASE_URL_FINANCE }}
-            DATABASE_URL_PROFILE=${{ secrets.DATABASE_URL_PROFILE }}
-            DATABASE_URL_PROJECT=${{ secrets.DATABASE_URL_PROJECT }}
-            DATABASE_URL_PURCHASE=${{ secrets.DATABASE_URL_PURCHASE }}
-            DATABASE_URL_RESOURCE=${{ secrets.DATABASE_URL_RESOURCE }}
-            DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}
-            DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}
-            JWT_PUBLIC_KEY=${{ secrets.JWT_PUBLIC_KEY }}
-            JWT_EXPIRATION_MS=${{ vars.JWT_EXPIRATION_MS }}
-            JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-            ENV
-          cd ~/microservices-deploy
-          docker compose -f docker-compose-deploy.yml pull
-          docker compose -f docker-compose-deploy.yml up -d
-          EOF 
+            ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" "echo -e 'DATABASE_URL_ASSET=${{ secrets.DATABASE_URL_ASSET }}\n
+            DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }}\n
+            DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }}\n
+            JWT_PUBLIC_KEY=${{ secrets.JWT_PUBLIC_KEY }}\n
+            JWT_EXPIRATION_MS=${{ vars.JWT_EXPIRATION_MS }}\n
+            DATABASE_URL_FINANCE=${{ secrets.DATABASE_URL_FINANCE }}\n
+            DATABASE_URL_PROFILE=${{ secrets.DATABASE_URL_PROFILE }}\n
+            JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}\n
+            DATABASE_URL_PROJECT=${{ secrets.DATABASE_URL_PROJECT }}\n
+            DATABASE_URL_PURCHASE=${{ secrets.DATABASE_URL_PURCHASE }}\n
+            DATABASE_URL_RESOURCE=${{ secrets.DATABASE_URL_RESOURCE }}' > ~/microservices-deploy/.env"
+            
+            ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" "
+            cd ~/microservices-deploy/ && 
+            docker compose -f docker-compose-deploy.yml pull && 
+            docker compose -f docker-compose-deploy.yml up -d"
 
       - name: Remote cleanup
         run: |
