add ssh agent eval

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,6 +112,7 @@ jobs:
 
       - name: Configure SSH key
         run: |
+          eval "$(ssh-agent -s)"            
           echo "${{ secrets.DEPLOY_PRIVATE_KEY }}" \
             | tr -d '\r' \
             | ssh-add -
