--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -110,19 +110,17 @@ jobs:
       - name: Install SSH tools
         run: sudo apt-get update && sudo apt-get install -y openssh-client rsync
 
-      - name: Configure SSH key
-        run: |
-          eval "$(ssh-agent -s)"            
-          echo "${{ secrets.DEPLOY_PRIVATE_KEY }}" \
-            | tr -d '\r' \
-            | ssh-add -
-          mkdir -p ~/.ssh && chmod 700 ~/.ssh
-          printf "Host *\n  StrictHostKeyChecking no\n" > ~/.ssh/config
+      - name: Setup SSH agent
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
 
       - name: Rsync docker-compose
         run: |
-          rsync -rahv docker-compose-deploy.yml \
-                ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}:~/microservices-deploy/
+          rsync -av -e "ssh -o StrictHostKeyChecking=no" \
+            docker-compose-deploy.yml \
+            ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}:~/microservices-deploy/
+        
 
       - name: Generate remote .env & launch
         run: |
