--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -117,6 +117,21 @@ services:
     restart: always
     ports:
       - "8085:8085"
+    environment: 
+      - DATABASE_URL_RESOURCE=${DATABASE_URL_RESOURCE}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
+      - JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+      - PROFILE_URL=http://profile-service:8080/api
+      - ASSET_URL=http://asset-service:8081/api
+      - FINANCE_URL=http://finance-service:8082/api
+      - PROJECT_URL=http://project-service:8083/api
+      - PURCHASE_URL=http://purchase-service:8084/api
+      - RESOURCE_URL=http://resource-service:8085/api
+      - FRONTEND_URL=${FRONTEND_URL}
+    networks:
+      - kamis-network
 
 networks:
   kamis-network:
