--- a/finance.report/src/main/resources/application.yml
+++ b/finance.report/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
             non_contextual_creation: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 finance.report:
   app:
     jwtPublicKey: ${JWT_PUBLIC_KEY}
