--- a/asset/Dockerfile
+++ b/asset/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21-jre-alpine
 
-COPY asset/build/libs/asset-0.0.1-SNAPSHOT.jar /app.jar
+COPY build/libs/asset-0.0.1-SNAPSHOT.jar /app.jar
 
 EXPOSE 8081
 
