--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -18,7 +18,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
-      - FRONTEND_URL=${FRONTEND_URL}
+      - FRONTEND_URL=https://www.sikamis.com
       - FILE_STORAGE_PATH=/app/uploads
     volumes:
       - /microservices/data/asset-uploads:/app/uploads
@@ -110,7 +110,7 @@ services:
       - PROJECT_URL=http://project-service:8083/api
       - PURCHASE_URL=http://purchase-service:8084/api
       - RESOURCE_URL=http://resource-service:8085/api
-      - FRONTEND_URL=${FRONTEND_URL}
+      - FRONTEND_URL=https://www.sikamis.com
       - FILE_STORAGE_PATH=/app/uploads
     volumes:
       - /microservices/data/purchase-uploads:/app/uploads
