--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -26,7 +26,7 @@ services:
       - kamis-network
 
   finance:
-    image: gcr.io/nimble-acrobat-461000-v3/finance:latest
+    image: gcr.io/nimble-acrobat-461000-v3/finance.report:latest
     container_name: finance-service
     restart: always
     ports:
