--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,4 +1,5 @@
 services:
+
   asset:
     image: gcr.io/nimble-acrobat-461000-v3/asset:latest
     container_name: asset-service
@@ -139,7 +140,19 @@ services:
       - FRONTEND_URL=https://www.sikamis.com
     networks:
       - kamis-network
-
+  nginx:
+    image: nginx:latest
+    container_name: nginx_gateway
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    networks:
+      - kamis-network
+      
 networks:
   kamis-network:
     external: true
