--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -120,7 +120,6 @@ jobs:
             docker-compose-deploy.yml \
             ${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}:~/microservices-deploy/
         
-
       - name: Generate remote .env & nginx.conf & launch
         run: |
           ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" "cat > ~/microservices-deploy/.env << 'EOF'
@@ -140,15 +139,11 @@ jobs:
           ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}
           EOF"
           
-          ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" "cat > ~/microservices-deploy/nginx.conf << 'EOF'
+          ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" 'cat > ~/microservices-deploy/nginx.conf << '\''EOF'\''
           ${{ secrets.NGINX_CONF }}
-          EOF"
+          EOF'
           
           ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" "
           cd ~/microservices-deploy/ && 
           docker compose -f docker-compose-deploy.yml pull && 
           docker compose -f docker-compose-deploy.yml up -d"
-      - name: Remote cleanup
-        run: |
-          ssh "${{ secrets.DEPLOY_USERNAME }}@${{ secrets.DEPLOY_SERVER }}" \
-            "docker system prune -af"
